fixed a layout issue on post

--- a/styles/components/team.css
+++ b/styles/components/team.css
@@ -15,7 +15,7 @@
 .team {
     /* position: relative; */
     /* width: 100%; */
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
